syntax = "proto3";

import "google/protobuf/any.proto";

package risingwave.executor.proto;
option java_package = "com.risingwave.proto.data";
option java_multiple_files = true;
option optimize_for = SPEED;

message Buffer {
    enum CompressionType {
        INVALID = 0;
        NONE = 1;
    }
    
    CompressionType compression = 1;
    bytes body = 2;
}

message DataType {
    enum IntervalType {
        INVALID = 0;
        YEAR = 1;
        MONTH = 2;
        DAY = 3;
        HOUR = 4;
        MINUTE = 5;
        SECOND = 6;
        YEAR_TO_MONTH = 7;
        DAY_TO_HOUR = 8;
        DAY_TO_MINUTE = 9;
        DAY_TO_SECOND = 10;
        HOUR_TO_MINUTE = 11;
        HOUR_TO_SECOND = 12;
        MINUTE_TO_SECOND = 13;
    }

    enum TypeName {
        UNKNOWN = 0;
        INT16 = 1;
        INT32 = 2;
        INT64 = 3;
        FLOAT = 4;
        DOUBLE = 5;
        BOOLEAN = 6;
        CHAR = 7;
        VARCHAR = 8;
        DECIMAL = 9;
        TIME = 10;
        TIMESTAMP = 11;
        INTERVAL = 12;
        DATE = 13;
        NULL = 14;
    }
    TypeName type_name = 1;
    // data length for char,
    // max data length for varchar
    // precision for time, decimal
    uint32 precision = 2;
    // scale for decimal
    uint32 scale = 3;
    bool is_nullable = 4;
    IntervalType interval_type = 5;
}

message ColumnCommon {
    DataType column_type = 1;
    Buffer null_bitmap = 2;
}

message FixedWidthNumericColumn {
    ColumnCommon common_parts = 1;
    Buffer values = 2;
}

message DataChunk {
    uint32 cardinality = 1;

    repeated google.protobuf.Any columns = 2;
}


